Lets try this again
Modified the img tag and dimensions.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
    <h2>Github Test Site</h2>
    Awaiting content later. Here is a cat rollup to look at while you wait.<br><br>
 
-    <img src="cat.jpg" width="800" height="600">Cat Rollup</img>
+    <img src="cat.jpg" width="600" height="450"></img>
   </body>
 </html>
